# bartender

./: Cargo.toml  Makefile  README.md
resources/osx/print_tool.app/Contents/: Info.plist
src/: lib.rs  main.rs
src/logic/: init.rs  mod.rs  print.rs  sql_select.rs
src/resource/: assets.rs  enum.rs  mod.rs
src/widgets/: mod.rs  tip.rs  ui.rs
