[package]
name = "print_tool"
version = "0.5.0"
edition = "2021"

build = "build.rs"
[[bin]]
path = "src/main.rs"
name = "标签打印"

[dependencies]
iced = {git = "https://github.com/iced-rs/iced.git", features = ["tokio","image"] }
iced_aw = { git = "https://github.com/iced-rs/iced_aw.git", default-features = false, features = ["modal","card","num-traits","number_input","spinner"] }
tokio ={version = "1.34.0",features = ["full"]}
chrono =  "0.4"
tiberius={version="0.12.2",default-features = false,features = ["native-tls"]}
tokio-util = { version = "0.7.8", features=["compat"]}
reqwest = { version = "0.11", features = [ "json","multipart"] }
serde_json = "1.0"
serde = {version = "1", features = ["derive"]}
image = { version = "0.24.7", default-features = false, features = ["png"]}

[build-dependencies]
embed-resource = "2.4"



[profile.release]
lto = true
strip = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

